--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
   <meta charset="utf-8">
   <title>Untitled</title>
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-
-	<div class="menu"></div>
+	<div class="main-container">
+		<div class="menu-order">
+			<h2>The Menu</h2>
+			<div class="menu"></div>
+		</div>
+		<div class="menu-order">
+			<h2>The Menu</h2>
+			<div class="order"></div>
+		</div>
+	</div>
 	
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="main.js"></script>
