--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div class="menu"></div>
 		</div>
 		<div class="menu-order">
-			<h2>The Menu</h2>
+			<h2>The Order</h2>
 			<div class="order"></div>
 		</div>
 	</div>
