remove button added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Untitled</title>
+  <title>js17-restaurant-ui</title>
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -10,11 +10,11 @@
 	<div class="main-container">
 		<div class="menu-order">
 			<h2>The Menu</h2>
-			<div class="menu"></div>
+			<div class="menu" data-form="add"></div>
 		</div>
 		<div class="menu-order">
 			<h2>The Order</h2>
-			<div class="order"></div>
+			<div class="order" data-form="remove"></div>
 		</div>
 	</div>
 	
