--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+	<div class="diet-preference">
+		<input type="checkbox" name="diet-preference" value="glutenFree"> Gluten Free</br>
+		<input type="checkbox" name="diet-preference" value="vegan"> Vegan</br>
+		<input type="checkbox" name="diet-preference" value="citrusFree"> Citrus Free</br>
 	<div class="main-container">
+	</div>
 		<div class="menu-order">
 			<h2>The Menu</h2>
 			<div class="menu" data-form="add"></div>
