added 'is' check

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div class="diet-preference">
-		<input type="checkbox" name="diet-preference" value="glutenFree"> Gluten Free</br>
-		<input type="checkbox" name="diet-preference" value="vegan"> Vegan</br>
-		<input type="checkbox" name="diet-preference" value="citrusFree"> Citrus Free</br>
+
 	<div class="main-container">
 	</div>
 		<div class="menu-order">
 			<h2>The Menu</h2>
+			<div class="diet-preference">
+		<input type="checkbox" name="diet-preference" value="GlutenFree"> Gluten Free
+		<input type="checkbox" name="diet-preference" value="Vegan"> Vegan
+		<input type="checkbox" name="diet-preference" value="CitrusFree"> Citrus Free
+		</div>
 			<div class="menu" data-form="add"></div>
 		</div>
 		<div class="menu-order">
