Added total price addition and removal feature

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<div class="menu-order">
 			<h2>The Order</h2>
 			<div class="order" data-form="remove"></div>
+			<div class="total-price"></div>
 		</div>
 	</div>
 	
